# 2A2026000155_lab_4

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  run_tests.py  system_prompt_analysis.md  test_results.md
config/: settings.py
core/: agent.py  prompts.py  tools.py
tests/: __init__.py  test_agent.py  test_tools.py
